# opgateway

./: CMakeLists.txt  README.md  genuavobj.cmake  opgateway_plugins.xml  package.xml  rosuavobject  todo.md
include/opgateway/: opgateway_plugin.h
msg/: FlightStatus.msg
src/: opgateway_node.cpp
src/uavobjects/: uavdataobject.cpp  uavdataobject.h  uavmetaobject.cpp  uavmetaobject.h  uavobject.cpp  uavobject.cpp.template  uavobject.h  uavobject.h.template  uavobjectmanager.cpp  uavobjectmanager.h  uavobjectsinit.cpp.template  uavobjectsinit.h
src/uavtalk/: telemetry.cpp  telemetry.h  telemetrymanager.cpp  telemetrymanager.h  telemetrymonitor.cpp  telemetrymonitor.h  uavtalk.cpp  uavtalk.h  uavtalkiobase.h  uavtalkrealy.h  uavtalkrelay.cpp  uavtalkrelay.h
src/uavtalk/iodrivers/: uavtalkserialio.cpp  uavtalkserialio.h  uavtalkudpio.cpp  uavtalkudpio.h
src/uavtalkrealy/: uavtalkrealy.cpp
test/: test_uavobjects.cpp  test_uavpbjects.cpp  test_uavtalk.cpp
